<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/descripcion_cabecera"
            android:cropToPadding="false"
            app:srcCompat="@drawable/the_blacklist" />

        <ImageView
            android:id="@+id/estrella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="-70dp"
            android:adjustViewBounds="true"
            android:baselineAligned="false"
            android:contentDescription="@string/estrella"
            app:srcCompat="@mipmap/ic_estrella_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temporadas"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editTextTemporadas"
                    android:text="@string/temporadas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextTemporadas"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/numTemporadas"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editTextUltEmision"
                    android:text="@string/ultima_emision"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editTextUltEmision"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/ultEmision"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sinopsis"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/vista"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vista"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/aceptar"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/aceptar"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>